After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743557 - Missing Plural form for "New Folder with Selection (%'d Items)"
Missing Plural form for "New Folder with Selection (%'d Items)"
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Internationalization (i18n)
3.15.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-01-26 22:19 UTC by Dušan
Modified: 2015-02-03 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus-view: Use ngettext for plural (1.31 KB, patch)
2015-02-02 15:11 UTC, Carlos Soriano
committed Details | Review

Description Dušan 2015-01-26 22:19:14 UTC
For this string is missing plural form:

#: ../src/nautilus-view.c:6206
msgid "New Folder with Selection (%'d Items)"
Comment 1 André Klapper 2015-01-27 19:40:38 UTC
Dusan: Please set proper keywords. Please put the string into the bug summary.
Please provide a link to instructions:

https://wiki.gnome.org/TranslationProject/DevGuidelines/Plurals
Comment 2 Carlos Soriano 2015-02-02 15:11:23 UTC
Created attachment 295953 [details] [review]
nautilus-view: Use ngettext for plural
Comment 3 Carlos Soriano 2015-02-02 15:12:10 UTC
I still don't understand all the details about languages and translation.

If I understood correctly, what it needs is actually the singular right? Because that's already plural.  But the thing is that the menu item is only visible when there are more than one item selected, so it's not necessary a singular.
So I just put a dummy singular item that will be never used. Is it ok now?
Comment 4 André Klapper 2015-02-02 17:14:57 UTC
If some specific questions do not get covered by https://wiki.gnome.org/TranslationProject/DevGuidelines/Plurals currently, please feel free to formulate those specific questions and send an email to gnome-i18n@.

> Because that's already plural.  But the thing is that the menu item is only
> visible when there are more than one item selected, so it's not necessary
> a singular.

* There is more than one plural form in many languages. Enter "4 months" and "5 months" on https://translate.google.com/ to Czech lang and see what happens.
* Singular form is not only used for ==1. Some languages use singular form also for 101, 201, 301, 401, ... (Arabic, if I remember correctly?).
* Don't assume anything when it comes to human languages. ;)
Comment 5 Carlos Soriano 2015-02-02 17:57:26 UTC
(In reply to comment #4)
> If some specific questions do not get covered by
> https://wiki.gnome.org/TranslationProject/DevGuidelines/Plurals currently,
> please feel free to formulate those specific questions and send an email to
> gnome-i18n@.
> 
> > Because that's already plural.  But the thing is that the menu item is only
> > visible when there are more than one item selected, so it's not necessary
> > a singular.
> 
> * There is more than one plural form in many languages. Enter "4 months" and "5
> months" on https://translate.google.com/ to Czech lang and see what happens.
> * Singular form is not only used for ==1. Some languages use singular form also
> for 101, 201, 301, 401, ... (Arabic, if I remember correctly?).
> * Don't assume anything when it comes to human languages. ;)

"So use ngettext even for situations where you know the number will always be greater than one, or even much greater than one, as in the example below."
Right, I skipped that section before.
Comment 6 Carlos Soriano 2015-02-02 18:01:51 UTC
Attachment 295953 [details] pushed as 5d7221a - nautilus-view: Use ngettext for plural
Comment 7 Piotr Drąg 2015-02-02 18:36:04 UTC
This should be actually:

(ngettext ("New Folder with Selection (%'d Item)",
"New Folder with Selection (%'d Items)",

Note the singular form in the first sentence.
Comment 8 Carlos Soriano 2015-02-03 09:05:14 UTC
(In reply to comment #7)
> This should be actually:
> 
> (ngettext ("New Folder with Selection (%'d Item)",
> "New Folder with Selection (%'d Items)",
> 
> Note the singular form in the first sentence.
Thanks for clarification. Pushed a fix.
Comment 9 Piotr Drąg 2015-02-03 11:12:48 UTC
Thank you!