nautilus-view: Use ngettext for plural

https://bugzilla.gnome.org/show_bug.cgi?id=743557